# scaleinvariance

./: .gitignore  CLAUDE.md  README.md  benchmark_fftw.py  benchmark_torch_conv.py  compare_hanning_methods.py  compare_kernels.py  pyproject.toml  setup.py  test_convolution_shift.py  verify_fftshift_bug.py
.claude/memory/: feedback_no_fallbacks.md
agent-skills/scaleinvariance/: SKILL.md
codex_optimization_notes/: 20260310-104720.md  error.txt
docs/: api.rst  conf.py  index.rst
examples/: LGMR_GMST_climo.nc  Land_and_Ocean_complete.txt  README.md  fif_comparison_demo.py  fractional_flux_demo.py  hurst_estimation_demo.py  meantemp_monthly_totals.txt  multi_dataset_haar_analysis.py  plot_1D_fif.py  plot_2D_fif.py  plot_3D_fif.py
scaleinvariance/: __init__.py  backend.py
scaleinvariance/analysis/: __init__.py  haar_fluctuation.py  intermittency.py  spectral.py  structure_function.py
scaleinvariance/simulation/: FIF.py  __init__.py  fbm.py  fractional_integration.py  generalized_scale_invariance.py  kernels.py  ls2010_flux_kernel_highorder.py  ls2010_flux_kernel_highorder_derivation.tex  ls2010_flux_kernel_highorder_nd.py  ls2010_flux_kernel_highorder_nd_derivation.tex
scaleinvariance/utils/: __init__.py
tests/: test_2d_fbm.py  test_acausal_fBm_hurst_estimation.py  test_basic_functionality.py  test_fif_2d_spectra.py  test_fif_spectra.py  test_hurst.py  test_kernels.py  test_nonconservative_fif_spectra.py  test_simulation.py  test_two_point_intermittency_exponent.py
tests/automated/: test_1D_FIF_hurst.py  test_1D_causality.py  test_2D_FIF_hurst.py  test_fBm_ND_circulant_hurst.py  test_two_point_intermittency_exponent.py
tests/functional/: conftest.py  generate_backend_refactor_reference.py  test_array_order.py  test_backend_refactor_reference.py  test_basic_functionality.py  test_gross_accuracy.py  (+7 more)
(+21 files in other folders)
