[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scaleinvariance"
version = "0.10.0"
description = "Simulation and analysis of multifractal fields"
authors = [{name = "Thomas DeWitt"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
torch = ["torch"]

[project.urls]
Homepage = "https://github.com/thomasdewitt/scaleinvariance"

[tool.pytest.ini_options]
testpaths = ["tests/functional"]
